Bug 882607 - Using white-space: pre-wrap for SMS and MMS
We also remove Utils.Message.format() which becomes useless.

--- a/apps/sms/style/sms.css
+++ b/apps/sms/style/sms.css
@@ -472,7 +472,7 @@ section[role="region"].new > header:first-child form {
   text-align: left;
   font-size: 1.8rem;
   line-height: 2.3rem;
-  white-space: normal;
+  white-space: pre-wrap;
   padding: 0;
 }
 
